# TradingAI

./: .env.example  .gitignore  README.md  main.py  preflight.py  pyproject.toml  render.yaml  run_demo_bot.py  run_demo_monitor.py  test_partial_tp.py  test_short.py
auto/: auto_loop.py  auto_state.py  auto_trader.py  candidate_report.py  candidate_selector.py  multi_tf_filter.py  position_watch_loop.py  short_strategy_filter.py  strategy_filter.py
backtest/: analysis_adapter.py  backtest_engine.py  backtest_metrics.py  backtest_result.py  backtest_trade.py  fee_calculator.py  history_loader.py  professional_backtest.py  run_backtest.py  simple_strategy.py  strategy_runner.py  trade_simulator.py
bot/: auto_commands.py  dashboard.py  inline_menus.py  main_keyboard.py  menu_command.py  monitor_commands.py  multi_tf_commands.py  paper_commands.py  paper_history_commands.py  paper_stats_commands.py  persistent_keyboard.py  position_commands.py  telegram_bot.py
config/: risk_config.py  trading_mode.py
core/: multi_timeframe_analyzer.py  scoring_engine.py  trading_core.py
database/: db.py  demo_trade_repository.py  history_repository.py  signal_log_repository.py  signal_repository.py  trade_history_repository.py  trade_repository.py  trade_result_repository.py
exchange/: binance_client.py  binance_futures_client.py  binance_live_client.py  binance_testnet_client.py  order_validation.py  portfolio_margin_api.py  symbol_rules.py  trading_client_factory.py
indicators/: market_analyzer.py  market_structure.py  support_resistance.py
intelligence/: fear_greed.py  (+2 more)
(+75 files in other folders)
