[project]
name = "trading-ai"
version = "0.1.0"
description = "Telegram trading assistant with paper and Binance Demo modes"
requires-python = ">=3.12"
dependencies = [
    "binance-futures-connector>=4.2,<5",
    "pandas>=3,<4",
    "python-dotenv>=1.2,<2",
    "python-telegram-bot>=22,<23",
    "requests>=2.34,<3",
    "ta>=0.11,<1",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "auto*",
    "backtest*",
    "bot*",
    "config*",
    "core*",
    "database*",
    "exchange*",
    "indicators*",
    "intelligence*",
    "paper*",
    "risk*",
    "scanner*",
    "services*",
    "strategy*",
    "validation*",
]
exclude = ["logs*", "tests*"]
namespaces = true

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
